--- a/Kontakt/style.css
+++ b/Kontakt/style.css
@@ -27,7 +27,7 @@ main.container-main {
 
 .main__article {
   width: 60%;
-  height: 130vh;
+  height: 120vh;
   padding: 0 0 1.5% 0;
   display: grid;
   grid-template: 0.7fr 1.3fr/repeat(2, 1fr);
@@ -170,8 +170,10 @@ main.container-main {
 
 .main__photo {
   width: 100%;
-  height: 100%;
+  height: 25vh;
   grid-column: 1/3;
+  object-fit: cover;
+  object-position: top right;
 }
 
 input[type=text] {
