--- a/Kontakt/style.scss
+++ b/Kontakt/style.scss
@@ -24,7 +24,7 @@ main.container-main {
 
 .main__article {
     width: 60%; 
-    height: 130vh;
+    height: 120vh;
     padding: 0 0 1.5% 0;
 
     display: grid;
@@ -177,8 +177,10 @@ main.container-main {
 
 .main__photo {
     width: 100%;
-    height: 100%;
+    height: 25vh;
     grid-column: 1/3;
+    object-fit: cover;
+    object-position: top right;
 }
 
 input[type=text] {
