--- a/Maszyny/style.scss
+++ b/Maszyny/style.scss
@@ -1,7 +1,7 @@
 @import "../__variables.scss";
 
 body, html {
-    background: white;
+    background: rgb(243, 243, 243);
     height: 100vh;
     width: 100vw;
 
@@ -60,6 +60,7 @@ input {
     padding: 0px 8px;
 
     text-transform: uppercase;
+    background: transparent;
 
     &.list {
         order: 2;
