--- a/O firmie/style.css
+++ b/O firmie/style.css
@@ -6,7 +6,7 @@
 }
 
 body, html {
-  background: white;
+  background: #f3f3f3;
   height: 100vh;
   width: 100vw;
   color: white;
@@ -60,6 +60,7 @@ input {
 }
 
 input.list {
+  background: transparent;
   order: 2;
   border: none;
 }
@@ -122,7 +123,7 @@ input.list {
   background: #d7d7d7;
   color: white;
   display: grid;
-  grid-template: 40% 1fr / 1fr;
+  grid-template: 0.4fr 1fr / 1fr;
 }
 
 .main__article_text {
@@ -134,8 +135,10 @@ input.list {
 }
 
 .main__article_banner {
+  object-fit: cover;
+  object-position: 0 -4rem;
   width: 100%;
-  height: 100%;
+  height: 25vh;
 }
 
 footer.container {
