--- a/Produkty/style.css
+++ b/Produkty/style.css
@@ -6,7 +6,7 @@
 }
 
 body, html {
-  background: white;
+  background: #f3f3f3;
   height: 100vh;
   width: 100vw;
   color: white;
@@ -57,6 +57,7 @@ input {
   color: #7d7d7d;
   padding: 0px 8px;
   text-transform: uppercase;
+  background: transparent;
 }
 
 input.list {
