--- a/Serwis/style.css
+++ b/Serwis/style.css
@@ -6,7 +6,7 @@
 }
 
 body, html {
-  background: white;
+  background: #f3f3f3;
   height: 100vh;
   width: 100vw;
   color: white;
@@ -51,7 +51,7 @@ nav .nav__text {
 }
 
 input {
-  background: white;
+  background: transparent;
   line-height: 20px;
   font-weight: bold;
   font-size: 1em;
@@ -122,14 +122,14 @@ input.list {
   width: 60%;
   background: #d7d7d7;
   display: grid;
-  grid-template: 35% 1fr / 1.5fr 1fr;
+  grid-template: 21.5% 1fr / 1.5fr 1fr;
   grid-gap: 2%;
   padding: 1% 1% 1% 1%;
 }
 
 .main__article_item1 {
   object-fit: cover;
-  height: 100%;
+  height: 25vh;
   width: 100%;
   grid-column: 1/3;
 }
@@ -144,6 +144,11 @@ input.list {
   align-items: flex-start;
   padding: 5%;
   background-color: #3563b9;
+}
+
+.main__article_item3_input {
+  background: white;
+  text-transform: none;
 }
 
 footer.container {
