--- a/Serwis/style.scss
+++ b/Serwis/style.scss
@@ -1,7 +1,7 @@
 @import "../__variables.scss";
 
 body, html {
-    background: white;
+    background: rgb(243, 243, 243);
     height: 100vh;
     width: 100vw;
 
@@ -50,7 +50,7 @@ nav {
 } 
 
 input {
-    background: white;
+    background: transparent;
     line-height: 20px;
 
     font-weight: bold;
@@ -123,14 +123,14 @@ input {
 
     background: $lightGray;
     display: grid;
-    grid-template: 35% 1fr / 1.5fr 1fr;
+    grid-template: 21.5% 1fr / 1.5fr 1fr;
     
     grid-gap: 2%;
     padding: 1% 1% 1% 1%;
 
     &_item1 {
         object-fit: cover;
-        height: 100%;
+        height: 25vh;
         width: 100%;
         // background-attachment:scroll;
         // background: url("./images/s.png");
@@ -147,6 +147,12 @@ input {
         align-items: flex-start;
         padding: 5%;
         background-color: rgb(53, 99, 185);
+
+        &_input {
+            background: white;
+            text-transform: none;
+            
+        }
     }
 }
 
