--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,7 @@
 @import "__variables.scss";
 
 body, html {
-    background: white;
+    background: rgb(243, 243, 243);
     color: white;
     font-family: $Font;  
 
@@ -51,6 +51,10 @@ input {
     padding: 0px 8px;
 
     text-transform: uppercase;
+
+    &:active {
+        border: none;
+    }
 
     &.list {
         order: 2;
@@ -106,11 +110,11 @@ input {
 
 section.container {
     display: flex;
-    height: 107.5vh;
+    height: 110vh;
     width: 60%;
     flex-direction: column;
     align-items: center;
-    background: $lightGray;
+    background: white;
 }
 
 .item1 {
@@ -156,7 +160,7 @@ section.container {
     border: 0.5px $Gray2 solid;
     background: transparent;
 
-    height: 24vh;
+    height: 25vh;
     width: 100%;
     margin-bottom: 2%;
     padding: 0;
@@ -214,14 +218,16 @@ section.container {
     padding: 0;
 
         &__container {
-            position: relative;
+            position: absolute;
             display: flex;
             flex-direction: column;
             overflow: auto;
             z-index: 2;
+            right: 0;
+            top: 0;
 
             max-height: 100%;
-            width: 100%;
+            width: 50%;
             padding: 1.5%;
         }
         &__header {
@@ -244,11 +250,11 @@ section.container {
             z-index: 2;
         }
         &__photo {
-            position: relative;
-            width: 80%;
-            height: 25vh;
-            left: 0;
+            position: absolute;
             top: 0;
+            left: 0;
+            width: 50%;
+            height: 100%;
             z-index: 1;
         }
 }
