--- a/Produkty/style.scss
+++ b/Produkty/style.scss
@@ -122,18 +122,23 @@ input {
     width: 60%;
     height: 120vh;
     display: grid;
-    grid-template: 0.3fr 1fr / 0.2fr 1fr;
+    grid-template: 0.29fr 1fr / 0.2fr 1fr;
     grid-gap: 2%;
     padding: 1%;
     background: $lightGray;
-
 }
 
 .main__image {
-    width: 100%;
-    height: 100%;
+    background: url("../images/Banne_v3r.jpg");
+    background-size: 100% 25vh;
+    background-repeat: no-repeat;
+    object-fit: cover;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
     grid-column: 1/3;
 }
+
 .main__article {
     display: grid;
     grid-template: 0.1fr 1fr / 1fr;
