--- a/Produkty/style.css
+++ b/Produkty/style.css
@@ -7,7 +7,7 @@
 
 body, html {
   background: #f3f3f3;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   color: white;
   font-family: Lato, "sans-serif";
@@ -22,7 +22,7 @@ main.container-main {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
 }
 
 nav {
@@ -132,8 +132,8 @@ input.list {
   background-size: 100% 25vh;
   background-repeat: no-repeat;
   object-fit: cover;
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   grid-column: 1/3;
 }
