--- a/Produkty/style.scss
+++ b/Produkty/style.scss
@@ -2,7 +2,7 @@
 
 body, html {
     background: rgb(243, 243, 243);
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
 
     color: white;
@@ -19,7 +19,7 @@ main.container-main {
     align-items: center;
     justify-content: center;
 
-    width: 100vw;
+    width: 100%;
 }
 nav {
     height: 8vh;
@@ -133,8 +133,8 @@ input {
     background-size: 100% 25vh;
     background-repeat: no-repeat;
     object-fit: cover;
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     grid-column: 1/3;
 }
