--- a/Produkty/style.scss
+++ b/Produkty/style.scss
@@ -117,7 +117,6 @@ input {
     order: 9;
 }
 
-
 .main__container {
     width: 60%;
     height: 120vh;
@@ -130,7 +129,7 @@ input {
 
 .main__image {
     background: url("../images/Banne_v3r.jpg");
-    background-size: 100% 25vh;
+    background-size: 100% 16rem;
     background-repeat: no-repeat;
     object-fit: cover;
     width: 100%;
