--- a/O firmie/style.scss
+++ b/O firmie/style.scss
@@ -4,6 +4,7 @@ body, html {
     background: rgb(243, 243, 243);
     height: 100vh;
     width: 100vw;
+    overflow-x: hidden;
 
     color: white;
     font-family: $Font;
@@ -20,101 +21,6 @@ main.container-main {
     justify-content: center;
 
     width: 100vw;
-}
-nav {
-    height: 8vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: nowrap;
-
-    margin: 1% 2.5% 1% 2.5%;
-
-    font-size: 1rem;
-    color: $blue;
-    
-    .nav__text {
-        order: 5;
-        font-size: 0.85em;
-        font-weight: bold;
-        color: $Gray2;
-
-        padding: 10px 8px;
-    }
-}
-
-#nav_logo {
-    margin-right: 1.8%;
-} 
-
-input {
-    background: white;
-    line-height: 20px;
-
-    font-weight: bold;
-    font-size: 1em;
-    color: $Gray2;
-
-    padding: 0px 8px;
-
-    text-transform: uppercase;
-
-    &.list {
-        background: transparent;
-        order: 2;
-        border: none;
-    }
-}
-
-#icon {
-    margin-bottom: 20px;
-}
-
-#icon1 {
-    order: 3;
-    padding: 5px 15px;
-    margin-right: 10px;
-    background-image: url("../images/poland.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 25px 15px;
-}
-
-#icon2 {
-    order: 4;
-    padding: 5px 18px;
-    background-image: url("../images/english.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 25px 15px;
-}
-
-#icon3 {
-    order: 6;
-    padding: 15px 18px;
-    background-image: url("../images/phone-icon2.png");
-    background-position: left center;
-    background-repeat: no-repeat;
-    background-size: 30px 30px;
-}
-#icon4 {
-    order: 8;
-    padding: 15px 18px;
-    margin-left: 10px;
-    background-image: url("../images/letter-icon2.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 52.5px 28px;
-}
-
-#icon-text1 {
-    order: 6;
-    padding: 0 15px 0 0;
-    font-size: 1em;
-}
-#icon-text2 {
-    order: 9;
 }
 
 .main__article {
