--- a/Rejestracja/style.scss
+++ b/Rejestracja/style.scss
@@ -4,6 +4,7 @@ body, html {
     background: white;
     height: 100vh;
     max-width: 100vw;
+    overflow-x: hidden;
 
     color: white;
     font-family: $Font;
@@ -23,6 +24,7 @@ main.container-main {
 }
 nav {
     height: 8vh;
+    width: 70%;
     display: flex;
     flex-direction: row;
     justify-content: center;
