--- a/style.scss
+++ b/style.scss
@@ -52,14 +52,6 @@ input {
 
     text-transform: uppercase;
 
-    &:active {
-        border: none;
-    }
-
-    &.list {
-        order: 2;
-        border: none;
-    }
 }
 
 #icon {
@@ -193,13 +185,14 @@ section.container {
             height: 100%;
             position: absolute;
             z-index: 3;
-            background: linear-gradient(to right, gray 42%, transparent 60%);
+            background: linear-gradient(to right, gray 40%, transparent 60%);
         }
         &__photo {
             position: absolute;
             z-index: 2;
             right: 0;
             top: 0;
+            object-fit: cover;
         }
 }
 
@@ -256,6 +249,7 @@ section.container {
             width: 50%;
             height: 100%;
             z-index: 1;
+            object-fit: cover;
         }
 }
 
