--- a/Logowanie/style.scss
+++ b/Logowanie/style.scss
@@ -1,7 +1,7 @@
 @import "../__variables.scss";
 
 body, html {
-    background: white;
+    background: $Tgray;
     height: 100vh;
     width: 100vw;
 
