--- a/Rejestracja/style.scss
+++ b/Rejestracja/style.scss
@@ -1,7 +1,7 @@
 @import "../__variables.scss";
 
 body, html {
-    background: white;
+    background: $Tgray;
     height: 100vh;
     max-width: 100vw;
     overflow-x: hidden;
@@ -22,33 +22,6 @@ main.container-main {
 
     width: 100vw;
 }
-nav {
-    height: 8vh;
-    width: 70%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: nowrap;
-
-    margin: 1% 2.5% 1% 2.5%;
-
-    font-size: 1rem;
-    color: $blue;
-
-    .nav__text {
-        order: 5;
-        font-size: 0.85em;
-        font-weight: bold;
-        color: $Gray2;
-
-        padding: 10px 8px;
-    }
-}
-
-#nav_logo {
-    margin-right: 1.8%;
-} 
 
 input {
     background: white;
