--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ nav .nav__text {
   margin: 0 1rem 0 0;
 }
 
+#nav_logo:hover {
+  cursor: pointer;
+}
+
 input {
   background: white;
   line-height: 20px;
@@ -54,6 +58,10 @@ input.list__login {
   border: none;
   background: transparent;
   order: 5;
+}
+
+input.list__login:hover {
+  cursor: pointer;
 }
 
 input.list:hover {
@@ -160,15 +168,6 @@ input {
   color: #7d7d7d;
   padding: 0px 8px;
   text-transform: uppercase;
-}
-
-input:active {
-  border: none;
-}
-
-input.list {
-  order: 2;
-  border: none;
 }
 
 #icon {
@@ -300,7 +299,7 @@ section.container {
   height: 100%;
   position: absolute;
   z-index: 3;
-  background: linear-gradient(to right, gray 42%, transparent 60%);
+  background: linear-gradient(to right, gray 40%, transparent 60%);
 }
 
 .item__photo {
@@ -308,6 +307,7 @@ section.container {
   z-index: 2;
   right: 0;
   top: 0;
+  object-fit: cover;
 }
 
 .item2 {
@@ -363,6 +363,7 @@ section.container {
   width: 50%;
   height: 100%;
   z-index: 1;
+  object-fit: cover;
 }
 
 .itemcontainer1 {
