--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,7 @@
 @import "__variables.scss";
 
 body, html {
-    background: rgb(243, 243, 243);
+    background: $background;
     color: white;
     font-family: $Font;  
 
