--- a/Kontakt/style.scss
+++ b/Kontakt/style.scss
@@ -1,7 +1,7 @@
 @import "../__variables.scss";
 
 body, html {
-    background: rgb(243, 243, 243);
+    background: $background;
     height: 100vh;
     max-width: 100vw;
 
@@ -180,7 +180,6 @@ main.container-main {
     height: 25vh;
     grid-column: 1/3;
     object-fit: cover;
-    object-position: top right;
 }
 
 input[type=text] {
