--- a/Logowanie/style.scss
+++ b/Logowanie/style.scss
@@ -1,7 +1,7 @@
 @import "../__variables.scss";
 
 body, html {
-    background: $Tgray;
+    background: $background;
     height: 100vh;
     width: 100vw;
 
@@ -56,6 +56,10 @@ main.container-main {
             border: 1px solid $Gray2;
             border-radius: 2px;
             text-transform: none;
+        }
+        &_button:hover {
+            cursor: pointer;
+            filter: opacity(0.7);
         }
     }
 }
