--- a/Maszyny/style.css
+++ b/Maszyny/style.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0px;
   padding: 0px;
+  filter: opacity(1);
   font-family: Lato, "sans-serif";
 }
 
@@ -31,11 +32,13 @@ nav .nav__text {
 }
 
 #nav_logo {
+  filter: opacity(1);
   margin: 0 1rem 0 0;
 }
 
 #nav_logo:hover {
   cursor: pointer;
+  filter: opacity(0.7);
 }
 
 input {
@@ -61,11 +64,13 @@ input.list__login {
 }
 
 input.list__login:hover {
+  filter: opacity(0.7);
   cursor: pointer;
 }
 
 input.list:hover {
   cursor: pointer;
+  filter: opacity(0.7);
 }
 
 input.list:active {
@@ -174,7 +179,7 @@ main.container-main {
 }
 
 .main__article_item_text {
-  font-size: 1.1rem;
+  font-size: 1.12rem;
 }
 
 .main__article_item_image {
