--- a/O firmie/style.css
+++ b/O firmie/style.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0px;
   padding: 0px;
+  filter: opacity(1);
   font-family: Lato, "sans-serif";
 }
 
@@ -31,11 +32,13 @@ nav .nav__text {
 }
 
 #nav_logo {
+  filter: opacity(1);
   margin: 0 1rem 0 0;
 }
 
 #nav_logo:hover {
   cursor: pointer;
+  filter: opacity(0.7);
 }
 
 input {
@@ -61,11 +64,13 @@ input.list__login {
 }
 
 input.list__login:hover {
+  filter: opacity(0.7);
   cursor: pointer;
 }
 
 input.list:hover {
   cursor: pointer;
+  filter: opacity(0.7);
 }
 
 input.list:active {
@@ -157,8 +162,8 @@ main.container-main {
 .main__article_text {
   width: 100%;
   height: 100%;
-  font-size: 2.5rem;
-  color: red;
+  font-size: 2rem;
+  color: #7d7d7d;
   padding: 2% 5% 2% 5%;
 }
 
