--- a/Rejestracja/style.scss
+++ b/Rejestracja/style.scss
@@ -1,7 +1,7 @@
 @import "../__variables.scss";
 
 body, html {
-    background: $Tgray;
+    background: $background;
     height: 100vh;
     max-width: 100vw;
     overflow-x: hidden;
