--- a/__variables.scss
+++ b/__variables.scss
@@ -7,11 +7,13 @@ $Font: Lato, "sans-serif";
 $blue: rgb(51,51,103);
 $blue2: rgb(1,175,236);
 $black: #171717;
+$background: rgb(243, 243, 243);
 
 *,*::after,*::before {
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
+    filter: opacity(1);
     font-family: $Font;
 }
 
@@ -44,9 +46,12 @@ nav {
 }
 
 #nav_logo {
+    filter: opacity(1);
     margin: 0 1rem 0 0;
+
     &:hover {
         cursor: pointer;
+        filter: opacity(0.7);
     }
 }
 
@@ -72,11 +77,13 @@ input {
             background: transparent;
             order: 5;
             &:hover {
+                filter: opacity(0.7);
                 cursor: pointer;
             }
         }
         &:hover {
             cursor: pointer;
+            filter: opacity(0.7);
         }
         &:active {
             outline-width: 5rem;
