--- a/Rejestracja/style.css
+++ b/Rejestracja/style.css
@@ -267,6 +267,11 @@ input.list {
   border-radius: 0.3rem;
 }
 
+.main__article_form_submit:hover {
+  cursor: pointer;
+  filter: opacity(0.7);
+}
+
 .button {
   color: #7d7d7d;
   background: white;
