--- a/Rejestracja/style.scss
+++ b/Rejestracja/style.scss
@@ -135,6 +135,10 @@ input {
             padding: 1% 2% 1% 2%;
             border: 0.15rem solid $Gray2;
             border-radius: 0.3rem;
+            &:hover {
+                cursor: pointer;
+                filter: opacity(0.7);
+            }
         }
     }
 }
