--- a/Maszyny/style.scss
+++ b/Maszyny/style.scss
@@ -39,9 +39,9 @@ main.container-main {
     width: 100%;
     height: 100%;
 
+    
     &_item {
         display: flex;
-        flex-direction: row-reverse;
         align-items: center;
         padding: 0.5% 2% 1.5% 0.5%;
         border: 0.15rem solid black;
@@ -49,8 +49,15 @@ main.container-main {
         &:not(:last-child) {
             border-bottom: none;
         }
+        &_container {
+            display: flex;
+            flex-direction: column;
+        }
+        &_header {
+            font-size: 1.5rem;
+        }
         &_text {
-            font-size: 1.12rem;
+            font-size: 1rem;
         }
         &_image{
             margin: 0 2% 0 0;
