--- a/Kontakt/style.scss
+++ b/Kontakt/style.scss
@@ -187,32 +187,10 @@ input[type=text] {
     text-transform: unset;
 }
 
-nav {
-    width: 100%;
-    height: 8vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: nowrap;
-    
-
-    margin: 1% 2.5% 0.5% 2.5%;
-
-    font-size: 1rem;
-    color: $blue;
-
-    .nav__text {
-        order: 5;
-        font-size: 0.85em;
-        font-weight: bold;
-        color: $Gray2;
-
-        padding: 10px 8px;
-    }
-}
-
 .scroller {
+    width: 2%;
+    height: 2%;
+
     display: flex;
     flex-direction: column;
     font-size: 3rem;
@@ -220,20 +198,18 @@ nav {
     position: fixed;
     right: 0.5%;
     top: 50%;
-    transform: translateY(-50%);
+    // transform: translateY(-50%);
 }
 
 #ig {
-    background-image: url();
+    color: rgb(255, 100, 177);
 }
 
 #fb {
     color: rgb(40, 40, 146);
-    margin: 0 0 30% 0;
-    -webkit-text-fill-color: transparent;
+    margin: 0.4rem 0 0.4rem 0;
 }
 #wa {
-    -webkit-text-fill-color: transparent;
     color: rgb(19, 163, 19);
 }
 
