--- a/Maszyny/style.css
+++ b/Maszyny/style.css
@@ -38,7 +38,7 @@ nav .nav__text {
 
 #nav_logo:hover {
   cursor: pointer;
-  filter: opacity(0.7);
+  filter: opacity(0.5);
 }
 
 input {
@@ -55,12 +55,14 @@ input.list {
   background: transparent;
   order: 2;
   border: none;
+  transition: filter 0.5s ease;
 }
 
 input.list__login {
   border: none;
   background: transparent;
   order: 5;
+  transition: filter 0.3s ease;
 }
 
 input.list__login:hover {
@@ -71,10 +73,6 @@ input.list__login:hover {
 input.list:hover {
   cursor: pointer;
   filter: opacity(0.7);
-}
-
-input.list:active {
-  outline-width: 5rem;
 }
 
 #icon {
@@ -168,7 +166,6 @@ main.container-main {
 
 .main__article_item {
   display: flex;
-  flex-direction: row-reverse;
   align-items: center;
   padding: 0.5% 2% 1.5% 0.5%;
   border: 0.15rem solid black;
@@ -178,8 +175,17 @@ main.container-main {
   border-bottom: none;
 }
 
+.main__article_item_container {
+  display: flex;
+  flex-direction: column;
+}
+
+.main__article_item_header {
+  font-size: 1.5rem;
+}
+
 .main__article_item_text {
-  font-size: 1.12rem;
+  font-size: 1rem;
 }
 
 .main__article_item_image {
