--- a/PanelAdm/style.css
+++ b/PanelAdm/style.css
@@ -38,7 +38,7 @@ nav .nav__text {
 
 #nav_logo:hover {
   cursor: pointer;
-  filter: opacity(0.7);
+  filter: opacity(0.5);
 }
 
 input {
@@ -55,12 +55,14 @@ input.list {
   background: transparent;
   order: 2;
   border: none;
+  transition: filter 0.5s ease;
 }
 
 input.list__login {
   border: none;
   background: transparent;
   order: 5;
+  transition: filter 0.3s ease;
 }
 
 input.list__login:hover {
@@ -71,10 +73,6 @@ input.list__login:hover {
 input.list:hover {
   cursor: pointer;
   filter: opacity(0.7);
-}
-
-input.list:active {
-  outline-width: 5rem;
 }
 
 #icon {
@@ -130,7 +128,7 @@ input.list:active {
 }
 
 body, html {
-  background: white;
+  background: #f3f3f3;
   height: 100vh;
   width: 100vw;
   color: white;
@@ -147,98 +145,6 @@ main.container-main {
   align-items: center;
   justify-content: center;
   width: 100vw;
-}
-
-nav {
-  height: 8vh;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: nowrap;
-  margin: 1% 2.5% 1% 2.5%;
-  font-size: 1rem;
-  color: #333367;
-}
-
-nav .nav__text {
-  order: 5;
-  font-size: 0.85em;
-  font-weight: bold;
-  color: #7d7d7d;
-  padding: 10px 8px;
-}
-
-#nav_logo {
-  margin-right: 1.8%;
-}
-
-input {
-  background: white;
-  line-height: 20px;
-  font-weight: bold;
-  font-size: 1em;
-  color: #7d7d7d;
-  padding: 0px 8px;
-  text-transform: uppercase;
-}
-
-input.list {
-  order: 2;
-  border: none;
-}
-
-#icon {
-  margin-bottom: 20px;
-}
-
-#icon1 {
-  order: 3;
-  padding: 5px 15px;
-  margin-right: 10px;
-  background-image: url("images/poland.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 25px 15px;
-}
-
-#icon2 {
-  order: 4;
-  padding: 5px 18px;
-  background-image: url("images/english.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 25px 15px;
-}
-
-#icon3 {
-  order: 6;
-  padding: 15px 18px;
-  background-image: url("images/phone-icon2.png");
-  background-position: left center;
-  background-repeat: no-repeat;
-  background-size: 30px 30px;
-}
-
-#icon4 {
-  order: 8;
-  padding: 15px 18px;
-  margin-left: 10px;
-  background-image: url("images/letter-icon2.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 52.5px 28px;
-}
-
-#icon-text1 {
-  order: 6;
-  padding: 0 15px 0 0;
-  font-size: 1em;
-}
-
-#icon-text2 {
-  order: 9;
 }
 
 .main__article {
@@ -262,18 +168,19 @@ input.list {
 }
 
 .main__article_item1_input {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   border-radius: 0.5rem;
   border: 2px solid #7d7d7d;
   margin: 0 0 20% 0;
   height: 2.5rem;
   width: 12rem;
-  transition: box-shadow 0.3s ease;
+  transition: 1s ease;
 }
 
 .main__article_item1_input:hover {
   cursor: pointer;
-  box-shadow: 2px 2px 8px black;
+  border: 2px solid #c2c2c2;
+  color: #c2c2c2;
 }
 
 .main__article_item2 {
