--- a/Produkty/style.css
+++ b/Produkty/style.css
@@ -38,7 +38,7 @@ nav .nav__text {
 
 #nav_logo:hover {
   cursor: pointer;
-  filter: opacity(0.7);
+  filter: opacity(0.5);
 }
 
 input {
@@ -55,12 +55,14 @@ input.list {
   background: transparent;
   order: 2;
   border: none;
+  transition: filter 0.5s ease;
 }
 
 input.list__login {
   border: none;
   background: transparent;
   order: 5;
+  transition: filter 0.3s ease;
 }
 
 input.list__login:hover {
@@ -71,10 +73,6 @@ input.list__login:hover {
 input.list:hover {
   cursor: pointer;
   filter: opacity(0.7);
-}
-
-input.list:active {
-  outline-width: 5rem;
 }
 
 #icon {
@@ -132,12 +130,12 @@ input.list:active {
 body, html {
   background: #f3f3f3;
   min-height: 100vh;
-  width: 100vw;
+  max-width: 100vw;
   color: white;
   font-family: Lato, "sans-serif";
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
@@ -151,21 +149,18 @@ main.container-main {
 
 .main__container {
   width: 60%;
-  height: 120vh;
+  height: 150vh;
   display: grid;
-  grid-template: 0.29fr 1fr / 0.2fr 1fr;
+  grid-template: 25rem 70% / 0.2fr 1fr;
   grid-gap: 2%;
   background: #d7d7d7;
 }
 
 .main__image {
-  background: url("../images/Banne_v3r.jpg");
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  object-fit: cover;
   width: 100%;
-  height: 100%;
+  max-height: 25vh;
   object-fit: cover;
+  object-position: top;
   grid-column: 1/3;
 }
 
@@ -225,7 +220,7 @@ footer.container .container__item1_text {
   justify-content: center;
   height: 100%;
   width: 47.5%;
-  font-size: 0.75em;
+  font-size: 0.8em;
   margin-right: 1%;
 }
 
