--- a/Produkty/style.scss
+++ b/Produkty/style.scss
@@ -3,14 +3,14 @@
 body, html {
     background: rgb(243, 243, 243);
     min-height: 100vh;
-    width: 100vw;
+    max-width: 100vw;
 
     color: white;
     font-family: $Font;
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 main.container-main {
@@ -24,22 +24,20 @@ main.container-main {
 
 .main__container {
     width: 60%;
-    height: 120vh;
+    height: 150vh;
     display: grid;
-    grid-template: 0.29fr 1fr / 0.2fr 1fr;
+    grid-template: 25rem 70% / 0.2fr 1fr;
     grid-gap: 2%;
     // padding: 1%;
     background: $lightGray;
 }
 
 .main__image {
-    background: url("../images/Banne_v3r.jpg");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    object-fit: cover;
+    // background: url("../images/Banne_v3r.jpg");
     width: 100%;
-    height: 100%;
+    max-height: 25vh;
     object-fit: cover;
+    object-position: top;
     grid-column: 1/3;
 }
 
@@ -102,7 +100,7 @@ footer.container {
 
             height: 100%;
             width: 47.5%;
-            font-size: 0.75em;
+            font-size: 0.8em;
             margin-right: 1%;
         }
     }
