--- a/Logowanie/style.css
+++ b/Logowanie/style.css
@@ -186,12 +186,7 @@ main.container-main {
   text-transform: none;
 }
 
-.main__article_form_button:hover {
-  cursor: pointer;
-  filter: opacity(0.7);
-}
-
-button {
+.main__article_form_button {
   color: #7d7d7d;
   background: white;
   border: 0.13rem solid #7d7d7d;
@@ -200,6 +195,11 @@ button {
   padding: 1% 3% 1% 3%;
   margin: 4% 0 0 0;
   font-size: 1.1rem;
+}
+
+.main__article_form_button:hover {
+  cursor: pointer;
+  filter: opacity(0.7);
 }
 
 footer.container {
