--- a/Logowanie/style.scss
+++ b/Logowanie/style.scss
@@ -57,6 +57,18 @@ main.container-main {
             border-radius: 2px;
             text-transform: none;
         }
+        
+        &_button {
+            color: $Gray2;
+            background: white;
+            border: 0.13rem solid $Gray2;
+            border-radius: 0.5rem;
+            font-weight: bold;
+        
+            padding: 1% 3% 1% 3%;
+            margin: 4% 0 0 0;
+            font-size: 1.1rem;
+        }
         &_button:hover {
             cursor: pointer;
             filter: opacity(0.7);
@@ -64,17 +76,6 @@ main.container-main {
     }
 }
 
-button {
-    color: $Gray2;
-    background: white;
-    border: 0.13rem solid $Gray2;
-    border-radius: 0.5rem;
-    font-weight: bold;
-
-    padding: 1% 3% 1% 3%;
-    margin: 4% 0 0 0;
-    font-size: 1.1rem;
-}
 
 footer.container {
     display: flex;
