--- a/PanelAdm/style.css
+++ b/PanelAdm/style.css
@@ -184,35 +184,75 @@ main.container-main {
 }
 
 .main__article_item2 {
-  display: grid;
-  grid-template: 1fr / 1fr 0.4fr;
-  grid-gap: 5%;
+  display: flex;
+  flex-direction: column;
   font-size: 2rem;
   margin: 2% 1% 2% 5%;
+  width: 70%;
 }
 
-.main__article_item2_input {
-  text-transform: none;
+.main__article_item2_Posty_text {
   font-size: 2rem;
-  width: 100%;
-  padding: 0;
 }
 
-.main__article_item2_input::first-letter {
+.main__article_item2_Posty_text:not(:last-child) {
+  padding: 0 0 1% 0;
+}
+
+.main__article_item2_Posty_input {
+  text-transform: none;
+  font-size: 1.5rem;
+  font-weight: normal;
+  width: 100%;
+  height: 3.5%;
+  margin: 0 0 3% 0;
+  border: 1px solid #6f6f6f;
+}
+
+.main__article_item2_Posty_input::first-letter {
   text-transform: uppercase;
 }
 
-.main__article_item2_text {
-  font-size: 2rem;
-  color: #6f6f6f;
-  padding: 0 0 1.5% 0;
+.main__article_item2_Posty_input::placeholder {
+  opacity: 0.7;
 }
 
-.main__article_item2_textarea {
-  width: 100%;
-  height: 60%;
+.main__article_item2_Posty_textarea {
+  font-size: 1rem;
+  border: 1px solid #6f6f6f;
+}
+
+.main__article_item2_Posty_textarea::placeholder {
+  opacity: 0.7;
+}
+
+.main__article_item2_Posty_submit {
   font-size: 1.5rem;
-  resize: none;
+  font-weight: 300;
+  border: 2px solid #6f6f6f;
+  border-radius: 0.35rem;
+  transition: 0.5s ease;
+}
+
+.main__article_item2_Posty_submit:hover {
+  cursor: pointer;
+  border: 2px solid;
+}
+
+.main__article_item2_Teksty_select {
+  color: #6f6f6f;
+  font-size: 1.0001rem;
+  border: 2px solid #6f6f6f;
+  border-radius: 0.2rem;
+  margin: 1% 0 0 0;
+  height: 3%;
+  width: 25%;
+}
+
+.main__article_item2_text {
+  font-size: 1.5rem;
+  color: #6f6f6f;
+  padding: 0 0 1.5% 0;
 }
 
 footer.container {
