--- a/PanelAdm/style.scss
+++ b/PanelAdm/style.scss
@@ -57,31 +57,74 @@ main.container-main {
         }
     }
     &_item2 {
-        display: grid;
-        grid-template: 1fr / 1fr 0.4fr;
-        grid-gap: 5%;
+        display: flex;
+        flex-direction: column;
         font-size: 2rem;
         margin: 2% 1% 2% 5%;
+        width: 70%;
         
-        &_input {
-            text-transform: none;
-            font-size: 2rem;
-            width: 100%;
-            padding: 0;
-            &::first-letter {
-                text-transform: uppercase;
+        &_Posty {
+            &_text {
+                font-size: 2rem;
+                &:not(:last-child) {
+                    padding: 0 0 1% 0;
+                }
+            }
+            &_input {
+                text-transform: none;
+                font-size: 1.5rem;
+                font-weight: normal;
+                width: 100%;
+                height: 3.5%;
+                margin: 0 0 3% 0;
+                border: 1px solid $Gray;
+
+                &::first-letter {
+                    text-transform: uppercase;
+                }
+                &::placeholder {
+                    opacity: 0.7;
+                }
+            }
+            &_textarea {
+                font-size: 1rem;
+                border: 1px solid $Gray;
+                &::placeholder {
+                    opacity: 0.7;
+                }
+            }
+            &_submit {
+                font-size: 1.5rem;
+                font-weight: 300;
+                border: 2px solid $Gray;
+                border-radius: 0.35rem;
+                transition: 0.5s ease;
+
+                &:hover {
+                    cursor: pointer;
+                    border: 2px solid ;
+                }
             }
         }
+
+        &_Teksty {
+            &_select {
+                color: $Gray;
+                font-size: 1.0001rem;
+                
+                border: 2px solid $Gray;
+                border-radius: 0.2rem;
+                margin: 1% 0 0 0;
+
+                height: 3%;
+                width: 25%;
+            }
+        }
+
         &_text {
-            font-size: 2rem;
+            font-size: 1.5rem;
             color: $Gray;
             padding: 0 0 1.5% 0;
-        }
-        &_textarea {
-            width: 100%;
-            height: 60%;
-            font-size: 1.5rem;
-            resize: none;
         }
     }
 }
