--- a/Rejestracja/style.scss
+++ b/Rejestracja/style.scss
@@ -115,7 +115,7 @@ input {
         &_inputs {
             display: flex;
             flex-direction: column;
-            margin: 0 0 3% 0;
+            margin: 0 0 4% 0;
             color: $Gray2;
             font-size: 1.1rem;
         }
@@ -125,6 +125,8 @@ input {
             border: 1px solid $Gray2;
             border-radius: 2px;
             text-transform: none;
+            font-weight: normal;
+            margin: 1% 0 0 0;
 
             &::placeholder {
                 opacity: 0.5;
