--- a/Serwis/style.scss
+++ b/Serwis/style.scss
@@ -50,12 +50,15 @@ main.container-main {
         display: flex;
         justify-content: center;
         align-items: flex-start;
-        padding: 5%;
+        // padding: 5% 0 0 0;
         background-color: rgb(53, 99, 185);
 
         &_input {
             background: white;
             text-transform: none;
+            width: 100%;
+            height: 4%;
+            border: 3px solid rgb(53, 99, 185);
             
         }
     }
