--- a/PanelAdm/style.css
+++ b/PanelAdm/style.css
@@ -229,12 +229,16 @@ main.container-main {
 }
 
 .main__article_item2_Posty_submit {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: bold;
   letter-spacing: 1px;
   border: 2px solid #6f6f6f;
   border-radius: 0.35rem;
   transition: 0.5s ease;
+  padding: 2% 3%;
+  margin: 5% 0 0 0;
+  align-self: center;
+  justify-self: center;
 }
 
 .main__article_item2_Posty_submit:hover {
